# my-aws-scripts

./: .flake8  .gitignore  README.md  Taskfile.yml  pyproject.toml
.github/: dependabot.yml  push.yml
.github/workflows/: push.yml
src/: tail-cloudwatch-logs.sh
src/aws_batch/: long-running-aws-batch-job-monitor.sh
src/cost_explorer/: .env.example  README.md  example.py  notify_aws_cost.py  print_aws_cost.py
src/cost_explorer/modules/: aws_cost.py  display.py  slack_notification.py  types.py
src/cost_explorer/tests/: test_aws_cost.py  test_display.py  test_slack_notification.py
