[project]
name = "my-aws-scripts"
version = "0.1.0"
description = "A collection of utility scripts designed to streamline tasks and operations on AWS."
authors = [
    { name = "Masashi Fukuzawa", email = "m.fukuzawa0316@gmail.com" }
]
dependencies = ["boto3", "prettytable", "python-dotenv", "requests"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["flake8", "black", "isort"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".venv/"]
